; ModuleID = '/home/carl/AnghaBench/reactos/sdk/tools/create_nls/extr_create_nls.c_find_subtable_with_diffs.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/tools/create_nls/extr_create_nls.c_find_subtable_with_diffs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@number_of_subtables_with_diffs = common dso_local global i64 0, align 8
@subtables_with_diffs = common dso_local global i64** null, align 8
@.str = private unnamed_addr constant [56 x i8] c"Could not add new subtable with diffs, storage is full\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64*, i64*)* @find_subtable_with_diffs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @find_subtable_with_diffs(i64* %0, i64* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64*, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i64, align 8
  store i64* %0, i64** %4, align 8
  store i64* %1, i64** %5, align 8
  store i64 0, i64* %6, align 8
  br label %7

7:                                                ; preds = %22, %2
  %8 = load i64, i64* %6, align 8
  %9 = load i64, i64* @number_of_subtables_with_diffs, align 8
  %10 = icmp ult i64 %8, %9
  br i1 %10, label %11, label %25

11:                                               ; preds = %7
  %12 = load i64**, i64*** @subtables_with_diffs, align 8
  %13 = load i64, i64* %6, align 8
  %14 = getelementptr inbounds i64*, i64** %12, i64 %13
  %15 = load i64*, i64** %14, align 8
  %16 = load i64*, i64** %5, align 8
  %17 = call i64 @memcmp(i64* %15, i64* %16, i32 128)
  %18 = icmp eq i64 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %11
  %20 = load i64, i64* %6, align 8
  store i64 %20, i64* %3, align 8
  br label %38

21:                                               ; preds = %11
  br label %22

22:                                               ; preds = %21
  %23 = load i64, i64* %6, align 8
  %24 = add i64 %23, 1
  store i64 %24, i64* %6, align 8
  br label %7

25:                                               ; preds = %7
  %26 = load i64, i64* @number_of_subtables_with_diffs, align 8
  %27 = icmp uge i64 %26, 4096
  br i1 %27, label %28, label %30

28:                                               ; preds = %25
  %29 = call i32 @printf(i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str, i64 0, i64 0))
  store i64 0, i64* %3, align 8
  br label %38

30:                                               ; preds = %25
  %31 = load i64*, i64** %5, align 8
  %32 = load i64**, i64*** @subtables_with_diffs, align 8
  %33 = load i64, i64* @number_of_subtables_with_diffs, align 8
  %34 = getelementptr inbounds i64*, i64** %32, i64 %33
  store i64* %31, i64** %34, align 8
  %35 = load i64, i64* @number_of_subtables_with_diffs, align 8
  %36 = add i64 %35, 1
  store i64 %36, i64* @number_of_subtables_with_diffs, align 8
  %37 = load i64, i64* %6, align 8
  store i64 %37, i64* %3, align 8
  br label %38

38:                                               ; preds = %30, %28, %19
  %39 = load i64, i64* %3, align 8
  ret i64 %39
}

declare dso_local i64 @memcmp(i64*, i64*, i32) #1

declare dso_local i32 @printf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
